nueva version de index

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
         <div class="hijo"><img src="" alt=""></div>
         <div class="hijo"><img src="" alt=""></div>
     </div>
+    
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde inventore quis laborum debitis voluptatibus nostrum provident? Necessitatibus corporis quos facilis quia esse sint explicabo sit aspernatur amet. Nam, omnis cumque.</p>
+    </div>
 </body>
 </html>
