agrego boton de ejemplo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- camelCase -->
 
     <div class="divHome">
-        <a href="pages/ejemplo-grid.html"></a>
+        <a href="pages/ejemplo-grid.html"> ir al ejemplo</a>
     </div>
 
     <!-- kebab-case -->
